--- a/brightcove_flutter_platform_interface/pubspec.yaml
+++ b/brightcove_flutter_platform_interface/pubspec.yaml
@@ -1,7 +1,8 @@
 name: brightcove_flutter_platform_interface
-description: A new Flutter project.
+description: Interface implementation for the Brightcove plugin
 version: 0.0.1
-homepage:
+repository: https://github.com/Genieology/brightcove_flutter/tree/main/brightcove_flutter_platform_interface
+homepage: https://github.com/Genieology/brightcove_flutter/tree/main/brightcove_flutter_platform_interface
 
 environment:
   sdk: '>=2.18.0 <3.0.0'
