--- a/brightcove_android/pubspec.yaml
+++ b/brightcove_android/pubspec.yaml
@@ -11,7 +11,11 @@ dependencies:
   flutter:
     sdk: flutter
   brightcove_flutter_platform_interface:
-    path: ../brightcove_flutter_platform_interface
+    git:
+      url: git@github.com:Genieology/brightcove_flutter.git
+      path: brightcove_flutter_platform_interface
+      ref: v0.0.1
+
 
 dev_dependencies:
   flutter_test:
