--- a/brightcove_android/pubspec.yaml
+++ b/brightcove_android/pubspec.yaml
@@ -2,6 +2,7 @@ name: brightcove_android
 description: A new Flutter project.
 version: 0.0.1
 homepage:
+publish_to: none
 
 environment:
   sdk: '>=2.18.0 <3.0.0'
