--- a/brightcove_android/pubspec.yaml
+++ b/brightcove_android/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
   brightcove_flutter_platform_interface:
     git:
-      url: git@github.com:Genieology/brightcove_flutter.git
+      url: https://github.com/Genieology/brightcove_flutter.git
       path: brightcove_flutter_platform_interface
       ref: v0.0.3
 
