--- a/brightcove_flutter/pubspec.yaml
+++ b/brightcove_flutter/pubspec.yaml
@@ -18,14 +18,14 @@ dependencies:
     sdk: flutter
   brightcove_android:
     git:
-      url: git@github.com:Genieology/brightcove_flutter.git
+      url: https://github.com/Genieology/brightcove_flutter.git
       path: brightcove_android
       ref: v0.0.3
 
 dependency_overrides:
   brightcove_flutter_platform_interface:
     git:
-      url: git@github.com:Genieology/brightcove_flutter.git
+      url: https://github.com/Genieology/brightcove_flutter.git
       path: brightcove_flutter_platform_interface
       ref: v0.0.3
 
