--- a/brightcove_flutter/pubspec.yaml
+++ b/brightcove_flutter/pubspec.yaml
@@ -22,11 +22,12 @@ dependencies:
     git:
       url: https://github.com/Genieology/brightcove_flutter.git
       path: brightcove_android
-      ref: 0.0.7
+      ref: v0.0.7
   brightcove_ios:
+    git:
       url: https://github.com/Genieology/brightcove_flutter.git
       path: brightcove_ios
-      ref: 0.0.7
+      ref: v0.0.7
 
 dependency_overrides:
   brightcove_flutter_platform_interface:
