--- a/brightcove_ios/pubspec.yaml
+++ b/brightcove_ios/pubspec.yaml
@@ -2,6 +2,7 @@ name: brightcove_ios
 description: A new Flutter plugin project.
 version: 0.0.1
 homepage:
+publish_to: none
 
 environment:
   sdk: '>=2.18.2 <3.0.0'
