working dependency management for ios

--- a/brightcove_flutter/pubspec.yaml
+++ b/brightcove_flutter/pubspec.yaml
@@ -22,12 +22,12 @@ dependencies:
     git:
       url: https://github.com/Genieology/brightcove_flutter.git
       path: brightcove_android
-      ref: new
+      ref: v0.1.0
   brightcove_ios:
     git:
       url: https://github.com/Genieology/brightcove_flutter.git
       path: brightcove_ios
-      ref: new
+      ref: v0.1.0
 
 dependency_overrides:
   brightcove_flutter_platform_interface:
