--- a/brightcove_ios/pubspec.yaml
+++ b/brightcove_ios/pubspec.yaml
@@ -15,10 +15,6 @@ dependencies:
     git:
       url: https://github.com/Genieology/brightcove_flutter.git
       path: brightcove_flutter_platform_interface
-  flutter_bcov:
-    git:
-      url: https://github.com/BrightcoveOS/ios-player-samples.git
-      path: PlayerUI/Flutter/flutter_bcov
 
 dev_dependencies:
   flutter_test:
@@ -29,6 +25,8 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   plugin:
+    implements: brightcove_flutter
     platforms:
       ios:
+        dartPluginClass: BrightcoveIosPlatform
         pluginClass: SwiftBrightcoveIosPlugin
