--- a/brightcove_flutter/pubspec.yaml
+++ b/brightcove_flutter/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   brightcove_ios:
     git:
       url: https://github.com/Genieology/brightcove_flutter.git
-      path: brightcove_android
+      path: brightcove_ios
       ref: v0.1.2
 
 dependency_overrides:
