--- a/brightcove_flutter/pubspec.yaml
+++ b/brightcove_flutter/pubspec.yaml
@@ -23,16 +23,17 @@ dependencies:
     git:
       url: https://github.com/Genieology/brightcove_flutter.git
       path: brightcove_android
-      ref: v0.1.4
+      ref: v0.1.5
   brightcove_ios:
     # path: ../brightcove_ios
     git:
       url: https://github.com/Genieology/brightcove_flutter.git
       path: brightcove_ios
-      ref: v0.1.4
+      ref: v0.1.5
 
 dependency_overrides:
   brightcove_flutter_platform_interface:
+    # path: ../brightcove_flutter_platform_interface
     git:
       url: https://github.com/Genieology/brightcove_flutter.git
       path: brightcove_flutter_platform_interface
