--- a/brightcove_ios/pubspec.yaml
+++ b/brightcove_ios/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   brightcove_flutter_platform_interface:
+    # path: ../brightcove_flutter_platform_interface
     git:
       url: https://github.com/Genieology/brightcove_flutter.git
       path: brightcove_flutter_platform_interface
