--- a/brightcove_ios/pubspec.yaml
+++ b/brightcove_ios/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
     git:
       url: https://github.com/Genieology/brightcove_flutter.git
       path: brightcove_flutter_platform_interface
+      ref: v0.1.8
 
 dev_dependencies:
   flutter_test:
