--- a/brightcove_flutter/pubspec.yaml
+++ b/brightcove_flutter/pubspec.yaml
@@ -23,21 +23,20 @@ dependencies:
     git:
       url: https://github.com/Genieology/brightcove_flutter.git
       path: brightcove_android
-      ref: v0.1.8
+      ref: v0.2.0
   brightcove_ios:
     # path: ../brightcove_ios
     git:
       url: https://github.com/Genieology/brightcove_flutter.git
       path: brightcove_ios
-      ref: v0.1.8
+      ref: v0.2.0
 
 dependency_overrides:
   brightcove_flutter_platform_interface:
-    # path: ../brightcove_flutter_platform_interface
+    path: ../brightcove_flutter_platform_interface
     git:
       url: https://github.com/Genieology/brightcove_flutter.git
       path: brightcove_flutter_platform_interface
-      ref: v0.1.8
 
 dev_dependencies:
   flutter_test:
