--- a/brightcove_flutter/pubspec.yaml
+++ b/brightcove_flutter/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
 
 dependency_overrides:
   brightcove_flutter_platform_interface:
-    path: ../brightcove_flutter_platform_interface
+    # path: ../brightcove_flutter_platform_interface
     git:
       url: https://github.com/Genieology/brightcove_flutter.git
       path: brightcove_flutter_platform_interface
