--- a/brightcove_flutter/pubspec.yaml
+++ b/brightcove_flutter/pubspec.yaml
@@ -19,17 +19,17 @@ dependencies:
   flutter:
     sdk: flutter
   brightcove_android:
-    # path: ../brightcove_android
-    git:
-      url: https://github.com/Genieology/brightcove_flutter.git
-      path: brightcove_android
-      ref: v0.2.0
+    path: ../brightcove_android
+    # git:
+    #   url: https://github.com/Genieology/brightcove_flutter.git
+    #   path: brightcove_android
+    #   ref: v0.2.0
   brightcove_ios:
-    # path: ../brightcove_ios
-    git:
-      url: https://github.com/Genieology/brightcove_flutter.git
-      path: brightcove_ios
-      ref: v0.2.0
+    path: ../brightcove_ios
+    # git:
+    #   url: https://github.com/Genieology/brightcove_flutter.git
+    #   path: brightcove_ios
+    #   ref: v0.2.0
 
 dependency_overrides:
   brightcove_flutter_platform_interface:
