--- a/brightcove_flutter/pubspec.yaml
+++ b/brightcove_flutter/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   flutter:
     sdk: flutter
   brightcove_android:
-    path: ../brightcove_android
+    # path: ../brightcove_android
     git:
       url: https://github.com/Genieology/brightcove_flutter.git
       path: brightcove_android
